# RASM-TaskPro

./: README.md
app/: index.html  jsconfig.json  package-lock.json  package.json
app/src/: App.svelte  app.postcss
app/src/components/: Task.svelte  Wallet.svelte
app/src/stores/: store.js
server/: Cargo.toml
server/src/: main.rs
