[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0" 
rocket = {version = "0.5.0-rc.3", features = ["json"]} 
serde = "1.0.136"
serde_json = "1.0"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"] 
